<resources>
    <string name="app_name">AndroidDrawingPad</string>
    <string name="color_button_red_description">Red Color Button</string>
    <string name="color_button_green_description">Green Color Button</string>
    <string name="color_button_blue_description">Blue Color Button</string>
    <string name="color_button_black_description">Black Color Button</string>
    <string name="color_button_yellow_description">Yellow Color Button</string>
    <string name="line_thickness_small_description">Small Line Thickness Button</string>
    <string name="line_thickness_medium_description">Medium Line Thickness Button</string>
    <string name="line_thickness_large_description">Large Line Thickness Button</string>
    <string name="clear_button_description">Clear Button</string>
</resources>
